# set-presentations

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
2024-03-01-software-system-entropy/: pyproject.toml  readme.md
2024-03-01-software-system-entropy/src/notebooks/: presentation.ipynb  presentation.py
2024-03-06-TR01-RTX-KG2-Effort-Updates/: presentation.tr01-rtx-kg2_updates_2024-03-06.md  readme.md
2024-03-28-research-data-engineering-with-apache-parquet/presentation/: research-data-engineering-with-apache-parquet.qmd
2024-05-10-/: README.md
2024-05-10-/presentation/: something.qmd
2024-05-10-mud-energy-and-containers/: README.md
2024-05-10-mud-energy-and-containers/presentation/: mud-energy-and-containers.qmd
2024-06-05-software-gardening-almanac-v0.0.1/: README.md
2024-06-05-software-gardening-almanac-v0.0.1/presentation/: software-gardening-almanac-v0.0.1.qmd
2024-06-07-images-and-databases/: .gitignore  pyproject.toml  readme.md
2024-06-07-images-and-databases/src/notebooks/: images_and_databases.ipynb  images_and_databases.py
2024-07-26-building-and-publishing-python-packages/: README.md
2024-07-26-building-and-publishing-python-packages/presentation/: building-and-publishing-python-packages.qmd
2024-07-26-packaging-deployments/: README.md
2024-07-26-packaging-deployments/presentation/: python-packaging-deployments.qmd
2024-10-10-Software-Testing/: README.md
2024-10-10-Software-Testing/presentation/: software-testing.qmd
2024-11-1-Derived-Data-Challenges-in-Single-cell-Profiling/: readme.md
2025-7-11-LLMs-and-Agents-Brainstorming/: readme.md
2025-9-26-Image-Data-Cycles/: readme.md
bridges-for-tabular-dimension-chasms/: jagged_array_data_handling_with_awkward_parquet_and_duckdb.ipynb  jagged_array_data_handling_with_awkward_parquet_and_duckdb.py  presentation.bridges-for-tabular-dimension-chasms.md  readme.md
codesgiving-2023/: codesgiving.md  readme.md
codesgiving-2023/presentation/: codesgiving.qmd
dbmi-lunch-and-learn-arrow/: README.md  pyproject.toml
dbmi-lunch-and-learn-arrow/dagger/: compile_presentation.py
dbmi-lunch-and-learn-arrow/presentation/: dbmi-lunch-and-learn-arrow.md  dbmi-lunch-and-learn-arrow.qmd
dev-time-and-value/: README.md
dev-time-and-value-cytomining-all-hands/: README.md
dev-time-and-value/presentation/: dev-time-and-value.qmd
git-github-and-github-actions/: presentation.git-github-and-github-actions.md  readme.md
packaging-as-publishing/: README.md
packaging-as-publishing/presentation/: packaging-as-publishing.qmd
pycytominer-transform-progress-april-2023/: presentation.research-in-progress-pycytominer-transform.md  readme.md
sbi2-2023-cytotable-poster/: poster.html  poster.rmd  qr-code-generation.sh  readme.md  style.css
scipy-2023-data-grammar-poster/: .gitignore  packages.bib  poster.rmd  readme.md  style.css
scipy-2023-data-grammar-poster/images/: main-diagram.mmd
software-gardening-almanac/: README.md
software-gardening-almanac/presentation/: software-gardening-almanac.qmd
surviving-code-decay/: presentation.surviving-code-decay.md  readme.md
the-art-and-craft-of-python-packaging/: README.md
the-art-and-craft-of-python-packaging/presentation/: packaging-as-publishing.qmd
