[tool.poetry]
name = "2024-06-07-images-and-databases"
version = "0.0.1"
description = "Presentation on images and databases given as part of periodic Way Lab meetings."
authors = ["Dave Bunten"]
license = "BSD-3-Clause"
readme = "readme.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
poetry = "^1.7.1"
poethepoet = "^0.24.4"
pyarrow = "^15.0.0"
scikit-image = "^0.23.2"
lancedb = "^0.8.2"
awkward = "^2.6.5"
matplotlib = "^3.9.0"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.0"
black = "^24.0.1"
jupyterlab-code-formatter = "^2.2.1"
jupytext = "^1.16.0"
jupyterlab = "^4.0.0"
jupyterlab-rise = "^0.42.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# defines a workflow for running a presentation
[tool.poe.tasks.present]
# sets a cwd relative for the shell script below
cwd = "src/notebooks"
shell = """
jupyter nbconvert --to slides images_and_databases.ipynb --post serve
"""

# defines a workflow for exporting a presentation using decktape via docker
[tool.poe.tasks.export_to_pdf]
# sets a cwd relative for the shell script below
cwd = "src/notebooks"
shell = """
jupyter nbconvert --to slides images_and_databases.ipynb
docker run --rm -t -v $PWD:/slides \
 --platform=linux/arm64 \
 ghcr.io/astefanutti/decktape:3.10.0 \
 /slides/images_and_databases.slides.html \
 2024-06-07-images_and_databases.pdf
"""

[tool.jupytext]
formats = "ipynb,py:light"

[tool.isort]
profile = "black"

[tool.setuptools_scm]
root = ".."
