[tool.poetry]
name = "dbmi-lunch-and-learn-arrow"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "presentation"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
dagger-io = "^0.5.0"
jupyterlab = "^3.6.3"
rise = "^5.7.1"
nbconvert = "^7.3.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.vulture]
min_confidence = 80

[tool.isort]
profile = "black"
